# proclip

./: CONTRIBUTING.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
codeclip/: __init__.py
proclip/: __init__.py  errors.py  types.py  ux.py
proclip/api/: __init__.py  clips.py
proclip/cli/: __init__.py  clip.py
proclip/cli/clip/: __init__.py  clip.py  new.py  paste.py
requirements/: base.txt  dev.txt
tests/: mock_clip.clip  mock_clip_no_vars.clip  mock_clip_no_vars.py  test_api_clip.py
tests/api/: test_clip.py
tests/data/: bad_mock_clip.clip  mock_clip.py
