[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
extend-exclude = "tests/mock*"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = "tests"

[tool.len8]
exclude = ["tests", "proclip/ux.py"]
code-length = 88

[tool.coverage.report]
omit = ["proclip/__init__.py", "proclip/ux.py"]
exclude_lines = [
    "if t.TYPE_CHECKING:",
    "raise NotImplementedError",
    "return NotImplemented",
    "except KeyboardInterrupt as exc",
]
